add restaurant to user endpoint
